--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,7 @@ background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
 }
 
 header {
-    background-image: url("http://thimble.cz/en/img/osobni-web.jpg");
+    background-image: url("http://www.zimbabwetourism.net/wp-content/uploads/2016/11/city-of-harare-zimbabwe.jpg");
     background-attachment: fixed;
     background-size: cover;
     background-position: top;
@@ -163,7 +163,7 @@ nav a {
 }
 
 #projects {
-  min-height: 800px;
+  min-height: 700px;
 
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -224,7 +224,7 @@ flex-direction: column-reverse;
 
 #portifolio {
   text-align: center;
-  min-height: 650px;
+  min-height: 950px;
 
 
 
@@ -301,11 +301,7 @@ footer .headline {
 
   }
 
-  .logo {
-    width: 90vw;
-    margin: 0 auto;
-    text-align: center;
-  }
+
 
   #logo {
     width: 75vw;
